Temp fix for z-index of dragged component.

--- a/web/src-static/theme.less
+++ b/web/src-static/theme.less
@@ -255,6 +255,10 @@ body {
     -webkit-user-select: auto;
 }
 
+.component.dragging {
+    z-index: 10000 !important;
+}
+
 .component.leaf {
     cursor: move;
 }
